--- a/css/style-core.css
+++ b/css/style-core.css
@@ -1371,3 +1371,26 @@ html.mm-opening.financity-mmenu-right .financity-mobile-header{ -webkit-transfor
 	        width: 100%;
 	        cursor: pointer;
         }
+  .whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25D366;
+    color: white;
+    border-radius: 50%;
+    padding: 15px;
+    text-align: center;
+    font-size: 24px;
+    z-index: 1000;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease;
+  }
+
+  .whatsapp-float:hover {
+    transform: scale(1.1);
+  }
+
+  .whatsapp-float img {
+    width: 30px;
+    height: 30px;
+  }
